# opencv-workbench

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.sh  clean.sh
share/: CMakeLists.txt
share/aggregate/: CMakeLists.txt  main.cpp
share/aggregate-test/: CMakeLists.txt  main.cpp
share/analyze-tracks/: CMakeLists.txt  main.cpp
share/annotate-metrics/: CMakeLists.txt  main.cpp
share/blob-test/: CMakeLists.txt  main.cpp
share/camera-test/: CMakeLists.txt  main.cpp
share/cell-test/: CMakeLists.txt  main.cpp
share/dbscan-test/: CMakeLists.txt  main.cpp
share/detect-with-hog/: CMakeLists.txt  main.cpp
share/diver-detect/: CMakeLists.txt  main.cpp
share/diver-detect-segment/: CMakeLists.txt  main.cpp
share/draw-hog/: CMakeLists.txt  main.cpp
share/ekf-test/: CMakeLists.txt  main.cpp
share/error-ellipse-test/: CMakeLists.txt  main.cpp
share/fin-freq/: CMakeLists.txt  main.cpp
share/fold-aggregate/: CMakeLists.txt  main.cpp
share/ground-plane/: CMakeLists.txt  main.cpp
share/hog-train-test/: CMakeLists.txt  fhog_object_detector_ex.cpp
share/hungarian-test/: CMakeLists.txt  main.cpp  main_2.cpp
share/k-fold/: CMakeLists.txt  main.cpp
share/kalman-filter-test/: CMakeLists.txt  main.cpp
share/larks-test/: CMakeLists.txt  main.cpp
share/mht-test/: CMakeLists.txt  main.cpp
share/misc/: CMakeLists.txt  main.cpp
share/munkres-test/: CMakeLists.txt  main.cpp
share/overlap-rect-test/: CMakeLists.txt  main.cpp
share/param-range/: CMakeLists.txt  main.cpp
share/pca/: CMakeLists.txt  main.cpp
share/periodic-detect/: CMakeLists.txt  main.cpp
share/plot-tracks/: CMakeLists.txt  main.cpp
share/range-test/: CMakeLists.txt  main.cpp
share/roc-average/: CMakeLists.txt  main.cpp
share/rtree-test/: CMakeLists.txt  main.cpp
share/run-detector/: CMakeLists.txt  main.cpp
share/sonar-sim/: CMakeLists.txt  circles.yaml  coordinated.yaml  main.cpp  moving-sonar.yaml  scenario.yaml  simple.yaml  straight-then-turn.yaml
share/test/: CMakeLists.txt  main.cpp
share/track-analysis/: CMakeLists.txt  main.cpp
share/trajectory-similarity/: CMakeLists.txt  main.cpp
share/ukf-test/: CMakeLists.txt  main.cpp
share/xml-test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/LARKS/: CMakeLists.txt  LARKS.cpp  LARKS.h
src/cluster/: RTree.h
src/detector/: CMakeLists.txt  Detector.h
src/detector/blank/: BlankDetector.cpp  BlankDetector.h  CMakeLists.txt
src/detector/displace/: CMakeLists.txt  DisplaceDetector.cpp  DisplaceDetector.h
src/detector/relative/: CMakeLists.txt  RelativeDetector.cpp  RelativeDetector.h
src/detector/stationarysonar/: CMakeLists.txt  StationarySonarDetector.cpp  StationarySonarDetector.h
src/detector/vertical/: CMakeLists.txt  VerticalDetector.cpp  VerticalDetector.h
src/dev/: CMakeLists.txt
src/dev/calculator/: calculatorform.h  calculatorform.ui  main.cpp
src/dev/cut/: CMakeLists.txt  cut.cpp  cut.h  cut_widget.ui
src/dev/eigenfaces/: facerec_eigenfaces.cpp
src/dev/facerec_video/: facerec_video.cpp
src/dev/hello-world/: CMakeLists.txt  main.cpp
src/dev/hellowindow/: CMakeLists.txt  main.cpp
src/dev/imageview/: CMakeLists.txt  imageview.qrc  imageviewform.cpp  imageviewform.h  imageviewform.ui
src/dev/mainwindow/: CMakeLists.txt  cut_widget.ui  imageview.qrc  imageviewform.cpp  imageviewform.h  imageviewform.ui  main.cpp
src/dev/video_object_label/: video_object_label.h
src/gui/: CMakeLists.txt
src/gui/annotate/: Annotate.cpp  Annotate.h  CMakeLists.txt  main.cpp
src/gui/calculator/: CMakeLists.txt  calculatorform.cpp
src/gui/cut/: CMakeLists.txt  cut.h  cut_widget.ui  main.cpp
src/gui/eigenfaces/: CMakeLists.txt  facerec_eigenfaces.cpp
src/gui/facerec_video/: CMakeLists.txt  facerec_video.cpp
src/gui/imageview/: CMakeLists.txt  imageviewform.cpp  imageviewform.ui
src/gui/mainwindow/: CMakeLists.txt  imageviewform.cpp  imageviewform.h  imageviewform.ui  main.cpp
src/gui/menu_window/: CMakeLists.txt  MenuWindow.cpp  MenuWindow.h  MenuWindow.qrc  MenuWindow.ui  main.cpp
src/gui/object_name/: CMakeLists.txt  ObjectName.cpp  ObjectName.h  ObjectName.ui  main.cpp
src/gui/scuba_face_label/: CMakeLists.txt  main.cpp  scuba_face_label.cpp  scuba_face_label.h  scuba_face_label.ui
src/gui/video_object_label/: CMakeLists.txt  (+3 more)
src/larks/: CMakeLists.txt
src/larks.bak/: larks.cpp  larks.h
src/math/: CMakeLists.txt  types.h
src/opencv-built-in/: CMakeLists.txt  FaceDetect.cpp  FaceDetect.h
src/periodic/: CMakeLists.txt  PeriodicDetect.cpp  PeriodicDetect.h
src/plot/: CMakeLists.txt  Plot.cpp  Plot.h
src/plugin_manager/: PluginManager.h
src/rapidxml/: rapidxml_print.hpp
src/syllo/: Blob.h  CMakeLists.txt  Chain.cpp  Chain.h  Cluster.h  syllo.cpp  syllo.h
src/syllo-widgets/: CMakeLists.txt  ClickableLabel.cpp  clickablelabel.h
src/tools/: CMakeLists.txt
src/track/: CMakeLists.txt  Dynamics.cpp  Dynamics.h  EKF.cpp  EKF.h  KalmanFilter.cpp  KalmanFilter.h  MotionModels.cpp  MotionModels.h  ParticleFilter.cpp  ParticleFilter.h  Track.h  filters.cpp  filters.h  hungarian.cpp  hungarian.h
src/trajectory/: CMakeLists.txt  TrajectoryAnalysis.cpp  TrajectoryAnalysis.h
src/utils/: AnnotationParser.cpp  AnnotationParser.h  BoundingBox.h  CMakeLists.txt  ColorMaps.cpp  ColorMaps.h  Ellipse.h  Frame.h  MeanStd.h  Object.h  OpenCV_Helpers.cpp  OpenCV_Helpers.h  ParseAnnotation.cpp  ParseAnnotation.h  Point.h  RMS.h  Rectangle.h  Sonar.cpp  Sonar.cpp.bak  Sonar.h  Stream.h  Stream_vcap_ptr.h  SylloQt.h
src/wb/: Blob.cpp  Blob.h  BlobProcess.cpp  BlobProcess.h  CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterProcess.cpp  ClusterProcess.h  DiverClassifier.cpp  DiverClassifier.h  Entity.cpp  Entity.h  FinDetector.cpp  FinDetector.h  MatrixTracker.cpp  MatrixTracker.h  NDT.cpp  NDT.cpp.bak  NDT.h  ObjectTracker.cpp  ObjectTracker.h  OpticalFlow.cpp  OpticalFlow.h  Parameters.cpp  Parameters.h  Pixel.h  Point.cpp  Point.h  Polar.h  PositionTracker.cpp  PositionTracker.h  ROC.h  RunningGaussian.cpp  RunningGaussian.h  ScalarTracker.cpp  ScalarTracker.h  WB.cpp  WB.h
(+125 files in other folders)
