add_subdirectory(range-test)
add_subdirectory(hungarian-test)
add_subdirectory(larks-test)
add_subdirectory(pca)
add_subdirectory(diver-detect)
add_subdirectory(diver-detect-segment)
add_subdirectory(xml-test)
add_subdirectory(periodic-detect)
add_subdirectory(plot-tracks)
add_subdirectory(run-detector)
add_subdirectory(aggregate)
add_subdirectory(kalman-filter-test)
add_subdirectory(ekf-test)
add_subdirectory(ukf-test)
add_subdirectory(trajectory-similarity)
add_subdirectory(blob-test)
add_subdirectory(hog-train-test)
add_subdirectory(detect-with-hog)
add_subdirectory(draw-hog)
add_subdirectory(overlap-rect-test)
add_subdirectory(ground-plane)
add_subdirectory(camera-test)
add_subdirectory(sonar-sim)
add_subdirectory(mht-test)

