add_subdirectory(wb)
add_subdirectory(plot)
add_subdirectory(opencv-built-in)
add_subdirectory(syllo)
add_subdirectory(track)
add_subdirectory(gui)
add_subdirectory(utils)
add_subdirectory(syllo-widgets)
add_subdirectory(tools)
#add_subdirectory(LARKS)
#add_subdirectory(periodic)
add_subdirectory(trajectory)
add_subdirectory(detector)

# Push up the OPENCV_WORKBENCH_LIBS variable
set(OPENCV_WORKBENCH_LIBS ${OPENCV_WORKBENCH_LIBS} ${LIBRARY_NAME} PARENT_SCOPE)
