add_subdirectory(hellowindow)
add_subdirectory(calculator)
add_subdirectory(imageview)
add_subdirectory(scuba_face_label)
add_subdirectory(video_object_label)
add_subdirectory(mainwindow)
add_subdirectory(cut)
add_subdirectory(eigenfaces)
add_subdirectory(facerec_video)
add_subdirectory(video_window)
add_subdirectory(workbench)


